Fix unsupported toList bug